--- a/package.json
+++ b/package.json
@@ -25,7 +25,13 @@
     "prettier:format": "prettier --write .",
     "prettier:check": "prettier --check .",
     "format": "bun run prettier:format",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*": [
+      "prettier --write --ignore-unknown"
+    ]
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
@@ -50,7 +56,8 @@
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "husky": "^8.0.0"
   },
   "packageManager": "bun@1.0.7"
 }
